variables.Variables.scala.error
Compilation error:
Variables:12: error: type mismatch;
 found   : Unit
 required: Boolean
  if (NbrPas=0) {
            ^